# SRC2-vo-ros

./: README.md
wvu_vo_ros/: CMakeLists.txt  LICENSE  package.xml  todo.txt
wvu_vo_ros/config/: excavator_parameters.yaml  hauler_parameters.yaml  iris_parameters.yaml  parameters.yaml  scout2_parameters.yaml  scout_parameters.yaml
wvu_vo_ros/include/wvu_vo_ros/: evaluator.hpp  ros_stereo_vo.hpp
wvu_vo_ros/launch/: evaluator.launch  evaluatorR1.launch  evaluatorR2.launch  vo_pipeline.launch  vo_pipelineExcavator.launch  vo_pipelineHauler.launch  vo_pipelineIris.launch  vo_pipelineScout.launch  vo_pipelineScout2.launch
wvu_vo_ros/src/: evaluator.cpp  evaluator_node.cpp  ros_stereo_vo.cpp  ros_stereo_vo_node.cpp
wvu_vo_ros/srv/: SetPose.srv
wvu_vo_ros/wvu_vo/: CMakeLists.txt  README.md
wvu_vo_ros/wvu_vo/examples/: example_kitti.cpp  example_src2.cpp
wvu_vo_ros/wvu_vo/examples/data/kitti/calib/: left.yaml  right.yaml
wvu_vo_ros/wvu_vo/examples/data/kitti/poses/: 00.txt
wvu_vo_ros/wvu_vo/examples/data/src2/calib/: left.yaml  right.yaml
wvu_vo_ros/wvu_vo/include/: CameraInfo.hpp  Image.hpp  StereoImage.hpp  StereoVO.hpp  Tracker.hpp  Types.hpp  opencv_utils.hpp
wvu_vo_ros/wvu_vo/scripts/: install_opencv.sh
wvu_vo_ros/wvu_vo/src/: CameraInfo.cpp  Image.cpp  StereoImage.cpp  StereoVO.cpp  Tracker.cpp  opencv_utils.cpp
