<?xml version="1.0"?>
<package format="2">
  <name>wvu_vo_ros</name>
  <version>0.0.0</version>

  <description>Wrapper for WVU Visual Odometry Library</description>

  <maintainer email="jared.l.strader@gmail.com">jared</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
